[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/UI/OldUI/EventEditorItem.gd" type="Script" id=1]

[node name="EventEditorItem" type="VBoxContainer"]
margin_right = 446.0
margin_bottom = 20.0
size_flags_horizontal = 3
alignment = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top Row" type="HBoxContainer" parent="."]
margin_right = 446.0
margin_bottom = 24.0

[node name="EvID" type="LineEdit" parent="Top Row"]
margin_right = 59.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Button"
align = 1
expand_to_text_length = true
caret_blink = true

[node name="Type" type="MenuButton" parent="Top Row"]
margin_left = 63.0
margin_right = 122.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Button"
flat = false
items = [ "Item 0", null, 0, false, false, 0, 0, null, "", false, "Item 1", null, 0, false, false, 1, 0, null, "", false, "Item 2", null, 0, false, false, 2, 0, null, "", false ]

[node name="Role" type="MenuButton" parent="Top Row"]
margin_left = 126.0
margin_right = 185.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Button"
flat = false
items = [ "Crime", null, 0, false, false, 0, 0, null, "", false, "Law", null, 0, false, false, 1, 0, null, "", false, "Politics", null, 0, false, false, 2, 0, null, "", false, "Neutral", null, 0, false, false, 3, 0, null, "", false ]

[node name="Animation" type="MenuButton" parent="Top Row"]
margin_left = 189.0
margin_right = 283.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Press Button"
flat = false
items = [ "Item 0", null, 0, false, false, 0, 0, null, "", false, "Item 1", null, 0, false, false, 1, 0, null, "", false, "Item 2", null, 0, false, false, 2, 0, null, "", false ]

[node name="Effects" type="MenuButton" parent="Top Row"]
margin_left = 287.0
margin_right = 375.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Sphere Poof"
flat = false
items = [ "Item 0", null, 0, false, false, 0, 0, null, "", false, "Item 1", null, 0, false, false, 1, 0, null, "", false, "Item 2", null, 0, false, false, 2, 0, null, "", false ]

[node name="MoveUp" type="Button" parent="Top Row"]
margin_left = 379.0
margin_right = 398.0
margin_bottom = 24.0
text = "^"

[node name="MoveDown" type="Button" parent="Top Row"]
margin_left = 402.0
margin_right = 421.0
margin_bottom = 24.0
text = "v"

[node name="Delete" type="Button" parent="Top Row"]
margin_left = 425.0
margin_right = 445.0
margin_bottom = 24.0
text = "X"

[node name="Bottom Row" type="HBoxContainer" parent="."]
margin_top = 28.0
margin_right = 446.0
margin_bottom = 48.0

[node name="InCharIDs" type="MenuButton" parent="Bottom Row"]
margin_right = 221.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "0"
flat = false
items = [ "Item 0", null, 0, false, false, 0, 0, null, "", false, "Item 1", null, 0, false, false, 1, 0, null, "", false, "Item 2", null, 0, false, false, 2, 0, null, "", false ]

[node name="OutEventIDs" type="MenuButton" parent="Bottom Row"]
margin_left = 225.0
margin_right = 446.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "0"
flat = false
items = [ "Item 0", null, 0, false, false, 0, 0, null, "", false, "Item 1", null, 0, false, false, 1, 0, null, "", false, "Item 2", null, 0, false, false, 2, 0, null, "", false ]
[connection signal="focus_exited" from="Top Row/EvID" to="." method="id_field_focus_lost"]
[connection signal="text_entered" from="Top Row/EvID" to="." method="id_field_entered"]
[connection signal="pressed" from="Top Row/MoveUp" to="." method="move_up"]
[connection signal="pressed" from="Top Row/MoveDown" to="." method="move_down"]
[connection signal="pressed" from="Top Row/Delete" to="." method="delete"]
